--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "config": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
