--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "bcrypt": "^3.0.7",
     "config": "^3.2.4",
     "cookie-parser": "~1.4.4",
@@ -14,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.13",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1"
   }
 }
