--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@hapi/joi": "^16.1.8",
     "bcrypt": "^3.0.7",
     "config": "^3.2.4",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "cookiejar": "^2.1.2",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
