--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "@hapi/joi": "^16.1.8",
-    "bcrypt": "^3.0.7",
     "config": "^3.2.4",
     "cookie-parser": "^1.4.4",
-    "cookiejar": "^2.1.2",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3",
